<resources>
    <string name="app_name">IMCI</string>
    <string name="result_activity">ResultActivity</string>
    <string name="symptoms">SYMPTOMS</string>
    <string name="Pdiseases">Possible diseases</string>
    <string name="treatments">Treatments</string>
    <string name="oral_drugs">Oral drugs at home</string>
    <string name="submit">Submit</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="drawer_close">Slider Menu Closed</string>
    <string name="menu_settings">Settings</string>
    <string name="pick_time">Pick time</string>
    <string name="selectdate">Select Date of Visit</string>
    <string name="lbl_Assessment">Assess,\n Classify &amp; \nIdentify Treatment</string>
    <string name="lbl_Follow_Up">Follow up Care</string>
    <string name="lbl_Eid_Testing">Hiv care for children</string>
    <string name="lbl_Treat_The_Child">Treat the Infant/Child</string>
    <string name="lbl_Paeds_ARVs">Paeds ARVs Drug Dosing</string>
    <string name="lbl_Counsel_Mother">Counsel the Mother</string>
    <string name="lbl_Nvp">EID Testing Algorithm</string>
    <string name="lbl_MainMenu">Main Menu</string>
    <string name="lbl_cough">Does the child have cough or difficult breathing?</string>
    <string name="lbl_diarrhoea">Does the child have diarrhoea?</string>
    <string name="lbl_fever">Does the child have fever?</string>
    <string name="lbl_ear_problem">Does the child have an ear problem?</string>
    <string name="lbl_hiv">Check for HIV exposure and infection</string>
    <string name="lbl_malnutrition">Check for malnutrition</string>
    <string name="lbl_anaemia">Check for anaemia</string>
    <string name="lbl_specialtreatment">Check for special treatmnet needs</string>
    <string name="lbl_jaundice">Check for jaundice</string>
    <string name="lbl_eyeproblem">Check for eye infections</string>
    <string name="lbl_feeding">Check for feeding problem, low weight or low birthweight</string>
    <string name="lbl_severedisease">Does the child have a severe disease</string>
    <string name="lbl_immunization">Check the child\'s immunization, vitamin A amp; Deworming status </string>
    <string name="lbl_Starter_Follow_Persistent_Diarrhoea">Follow up persistent diarrhoea</string>
    <string name="lbl_Starter_Follow_Dysentry">Follow up dysentry</string>
    <string name="lbl_Starter_Follow_EyeInfection">Follow up eye infection</string>
    <string name="lbl_Starter_Follow_EarInfection">Follow up ear infection</string>
    <string name="lbl_Starter_Follow_EyeMouth">Follow up eye or mouth complications of measles</string>
    <string name="lbl_Starter_Follow_Feeding">Follow up feeding problem</string>
    <string name="lbl_Starter_Follow_FeverNoMalaria">Follow up fever: no malaria</string>
    <string name="lbl_Starter_Follow_HivExposed">Follow up HIV exposed</string>
    <string name="btn_immunization_tbl">View Immunization Table</string>
    <string name="instructions_immunization_tbl">• If BCG not given at birth, it should not be given to children with symptomatic HIV /AIDS.\n• Measles vaccine at 6 months is for HIV exposed /infected children.\n• Yellow fever vaccine should not be given to children with symptomatic HIV /AIDS.\n• Yellow fever vaccine is only offered in (Koibatek, Baringo, Keiyo) in Rift valley.\n• Rota virus vaccine-should not be given to children over 15 months.</string>
    <string name="immunization_other_problems"><b>ASSESS FOR OTHER PROBLEMS THAT THE CHILD MAY HAVE</b></string>
    <string name="immunization_to_make_sure">• Make sure a child with any general danger sign is referred: \n
    \t - After first dose of appropriate antibiotic and other urgent treatments.\n
    \t - Exception: Rehydration of the child according to Plan C may resolve danger signs so that referral is no longer needed.</string>
    <string name="young_treatment_severe_dehydration">    • Admit or refer URGENTLY TO HOSPITAL with mother giving frequent sips of ORS on the way.Advise mother to continue breatfeeding.\n• Advice mother to keep the young infant warm on the way to hospital or...\n• If infant does not have VERY SEVERE DISEASE: Give fluid for severe dehydration.\n• Give Zinc Sulphate.</string>
    <string name="young_treatment_some_dehydration">  • Admit or refer URGENTLY to hospital with mother giving frequent sips of ORS on the way.\n• Advise mother to continue breastfeeding.\n• Give fluid and food for some dehydration.\n• Give zinc sulphate.</string>
    <string name="young_treatment_no_dehydration">    • Give fluids to treat diarrhoea at home.\n• Give zinc sulphate.\n• Advise mother when to return immediately.\n• Follow up in 5 days if not improving.</string>
    <string name="young_treatment_severe_prolonged_diarrhoea">   • If the young infant is dehydrated, treat dehydration before referral unless the infant has also a VERY SEVERE DISEASE.\n• Admit or refer to hospital.</string>
    <string name="young_treatment_severe_abdominal_problem">    • Give first dose of Benzylpenicillin and Gentamicin.\n• Treat the infant/child for or prevent low blood sugar.\n• Admit or refer URGENTLY to hospital.\n• Advise mother how to keep the infant warm on the way.</string>
    <string name="DiseaseSDehydration">        SEVERE DEHYDRATION</string>
    <string name="DiseaseSDehydration1">        SOME DEHYDRATION</string>
    <string name="DiseaseSDehydration2">        NO DEHYDRATION</string>
    <string name="signs_severe_pneumonia">      • Any general danger sign\n• Chest indrawing\n• Stridor in calm child\n• Fast breathing\n• No signs of pneumonia or very severe disease. </string>
    <string name="signs_pneumonia">        • Fast Breathing\n</string>
    <string name="signs_no_pneumonia">        • No signs of pneumonia or very severe disease.\n</string>
    <string name="young_treatment_risk_bact">         • Give babay 1st dose of Benzylpenicillin and Gentamicin.\n• Treatment to prevent low blood sugar.\n• Keep warm.\n• Admit or refer urgently to hospital.</string>
    <string name="young_treatment_risk_syphilis">         • Give baby single dose of bentathine penicilin.\n• Ensure mother and partner are treated.\n• Follow up in 14 days.</string>
    <string name="young_treatment_risk_transmission_hiv">         • Give ARV prophylaxis to the newborn.\n• Counsel on infant feeding options.\n• Give special counselling to breast feeding omther.Emphasize on exclusive breastfeeding for 6 months.\n• Teach the mother replacement feeding if that\'s her choice and meets AFASS criteria.\n• Inform mother of DNA PCR test at 6 weeks.\n• Follow up in 14 days.</string>
    <string name="young_treatment_risk_TB">         • Give infant Isoniazid prophylaxis for 6 months.\n• Give BCG vaccination to the infant only when baby\'s treatment is completed.\n• Follow up in 14 days.</string>
    <string name="treatment_of_severe_malaria"><b>1. Artesunate for Severe Malaria</b>\n
        • Dissolve artesunic powder with 5 percent sodium bicarbonate solution(provided with vial).Dilute resultant solution with
        5ml of 5 percent dextrose.\n• Administer 2.4mg/kg stat by slow IV injection then 1.2mg/kg at 12 hrs
        and 24 hrs then 1.2 mg/kg daily until the patient is able to tolerate oral medications.\n• Artesunate can be given IM at the same dosage and intervals.\n• Thereafter a complete course of artemetherlumefantrine (AL) is given.</string>
    <string name="quinine_for_severe_malaria"><b>2. Quinine for Severe Malaria</b>\n
        FOR CHILDREN BEING REFERRED WITH VERY SEVERE FEBRILE DISEASE: \n• Give fisrt dose of intramuscular quinine(20mg/kg-lodaing dose)
        and refer child urgently to hospital.\n
        IF REFERRAL IS NOT POSSIBLE: \n• Give first dose of IM quinine(20mg/kg-loading dose). The child
        should remain lying down for one hour.\n• Treat to prevent hypoglycemia.\n• Repeat the quinine injection every 8 hours(maintenance dose at 10mg/kg)
        until the child is able to take an oral antimalarial. Do not continue quinine
        injections for more than 1 week.\n• If low risk of malaria, do not give quinine to a child less than 4 months of age.\n• Give Vitamin A.</string>
    <string name="artemether_for_severe_malaria"><b>3. Artemether for Severe Malaria</b>\n
        • Administer a loading dose of 3.2mg/kg IM stat then 1.6mg/kg 
        daily until the patient is able to tolerate oral medications.\n
        • Thereafter a complete course of AL is given.\n
        • Admit or refer patients with the following: \n
        \t • Severe anaemia(Hb level of below 5g/dl or haemotocrit of below 15 percent)\n
        \t • Two or more convulsions within a 24-hr period.\n
        \t • Hyperparasitaemia and are stable. These patients can be treated with 
        AL, DHA-PPQ or oral quinine where ACT is not available. However,they need to be closely monitored.</string>
    <string name="keep_young_warm"><b>KEEP THE YOUNG INFANT WARM</b>\n <b>• Warm the young infant using skin to skin contact: Kangaroo Mother Care</b>\n
    \t- Provide privacy to the mother. If mother isnot available, skin to skin contact can be provided by the father or any other adult.\n
    \t- Request the mother to sit or recline comfortably.\n
    \t- Undress the baby gently, except for cap,nappy and socks.\n
    \t- Ask the mother to wear light, loose clothing that is comfortable inthe ambient temperature, and can accommodate the young infant.\n
    \t- Place the young infant on the mother\'s chest prone in an upright and extended posture, between her breasts in skin contact; turn the baby\'s head to one side and keep always clear.\n
    \t- Ensure that the young infant\'s feet and elbows are flexed into a frog-like position and the head and chest are on the mother\'s chest,
    with the head in a slighty extended position.\n
    \t- cover the infant with mother\'s clothes; wrap the mother-baby duo with an added blanket or shawl.\n
    \t- After positioning the young infant, allow mother to rest with the young infant.\n
    \t- Breast feed the young infant frequently.\n
    \t- If possible, warm the room above 25°C with a heating device.</string>
    <string name="if_skin_to_skin_impossible"><b>• If skin to skin contact is not possible: </b>\n
    \t- If radiant warmer is available use it warm the young infant or.\n
    \t- Warm the room 25°C with heating device and clothe the young infant in 3-4 layers of warm clothes, cover
    the head with a cap(include gloves and socks) and cover with a blanket or shawl. </string>
    <string name="reassess_after_one_hour"><b>• Reassess after 1 hour: </b>\n
   \t- Assess for signs of Very Severe Disease.\n
   \t- Measure axillary temperature by placing the thermometer in the axillary for 5 minutes(or feel for low body temperature)</string>
    <string name="if_any_signs_very_severe_disease"><b>• If any signs of "very severe disease" or temperature still 36.5°C.</b>\n
     \t- Admit or refer URGENTLY to hospital after giving pre-referral treatment for "Very Severe Disease".  </string>
    <string name="if_no_signs_very_severe_disease"><b>• If no signs of "very severe disease" or temperature still 36.5°C.</b>\n
     \t- Advise how to keep the young infant warm at home.\n
     \t- Advise mother to give home care.\n
     \t- Advise mother when to return immediately.   </string>
    <string name="teach_the_mother_on_way_to_hospital"><b>Teach the Mother How to Keep the Young Infant Warm on the way To the Hospital\n</b>             • Provide skin to skin contact OR \n
            • Keep the infant clothed or covered as much as possible all the time. Dress the young infant in 3-4 layers of clothes(including hat, gloves, socks)
            and wrap him/her in a soft dry cloth and cover with shawl or blanket. Hold the baby close to your body.</string>
</resources>