<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0E68C">
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0E68C"
    android:orientation="vertical" >

    <Button
        android:id="@+id/view_immunization_tbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_immunization_tbl" />

     <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
        android:id="@+id/instruction_immunization"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="20dp"
        android:text="@string/instructions_immunization_tbl"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

     <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
        android:id="@+id/immunization_other_problems"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/immunization_other_problems"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

     <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
        android:id="@+id/immunization_to_make_sure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/immunization_to_make_sure"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

</LinearLayout>
</ScrollView>