<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/signsDehydration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ff69b4"
        android:text="@string/DiseaseSDehydration"
        android:textColor="#000000"
        android:textSize="20dp" />

    <TextView
        android:id="@+id/signsDehydrationPink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/signsDehydration"
        android:layout_marginTop="26dp"
        android:background="#ffff00"
        android:text="@string/DiseaseSDehydration1"
        android:textColor="#000000" />

    <TextView
        android:id="@+id/space2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/signsDehydrationPink"
        android:layout_marginTop="59dp"
        android:background="#90ee90"
        android:text="@string/DiseaseSDehydration2"
        android:textColor="#000000" />

</RelativeLayout>