<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0E68C"
    android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0E68C"
    android:orientation="vertical" >

     <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/treatment_of_severe_malaria"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <Button
        android:id="@+id/btn_art_dos_tbl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Artesunate dosage table" />
    
     <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/quinine_for_severe_malaria"
        android:textAppearance="?android:attr/textAppearanceMedium" />
     <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:text="@string/artemether_for_severe_malaria"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
</ScrollView>