<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrl_2"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FAFAD2"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/scrl_1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#FAFAD2"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/tbl_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff"
            android:orientation="vertical" >
        </LinearLayout>

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff69b4"
            android:text="SEVERE DEHYDRATION"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signsDehydrationPink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff69b4"
            android:text="@string/young_treatment_severe_dehydration"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFFF00"
            android:text="SOME DEHYDRATION"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/space2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffff00"
            android:text="@string/young_treatment_some_dehydration"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#90EE90"
            android:text="NO DEHYDRATION"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signsDehydration"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#90ee90"
            android:text="@string/young_treatment_no_dehydration"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff69b4"
            android:text="SEVERE PROLONGED DIARRHOEA"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff69b4"
            android:text="@string/young_treatment_severe_prolonged_diarrhoea"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff69b4"
            android:text="POSSIBLE SERIOUS ABDOMINAL PROBLEM"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff69b4"
            android:text="@string/young_treatment_severe_abdominal_problem"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

</ScrollView>