<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#f4eaa3"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="350.0dip"
            android:layout_height="155.0dip"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/llAssessment"
                android:layout_width="150.0dp"
                android:layout_height="150.0dip"
                android:layout_marginRight="5dp"
                android:background="#ff7777"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnAssessments"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/lbl_Assessment"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llTreatTheChild"
                android:layout_width="150.0dp"
                android:layout_height="150.0dip"
                android:background="#99cc00"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnTreatTheChild"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/lbl_Treat_The_Child"
                    android:textSize="25sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="350.0dip"
            android:layout_height="155.0dip"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/llcounselmother"
                android:layout_width="150.0dp"
                android:layout_height="150.0dip"
                android:layout_marginRight="5dp"
                android:background="#9C8AA5"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnCounselMother"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/lbl_Counsel_Mother"
                    android:textSize="25sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llFolloUp"
                android:layout_width="150.0dp"
                android:layout_height="150.0dip"
                android:layout_gravity="right"
                android:background="#ffbb33"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnFollowUp"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/lbl_Follow_Up"
                    android:textSize="25sp" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="310dp"
            android:layout_height="155.0dip"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/llHivCare"
                android:layout_width="310dp"
                android:layout_height="150.0dip"
                android:layout_marginRight="5dp"
                android:background="#33b5e5"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btnNVP"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="match_parent"
                    android:layout_height="fill_parent"
                    android:text="@string/lbl_Eid_Testing"
                    android:textSize="25sp" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</ScrollView>