<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrl_1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#FAFAD2"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/tbl_1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ff69b4"
            android:text="RISK OF BACTERIAL INFECTION"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signsDehydrationPink"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ff69b4"
            android:text="@string/young_treatment_risk_bact"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffff00"
            android:text="RISK OF CONGENITAL SYPHILIS"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/space2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffff00"
            android:text="@string/young_treatment_risk_syphilis"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffff00"
            android:text="RISK OF HIV TRANSMISSION"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/signsDehydration"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffff00"
            android:text="@string/young_treatment_risk_transmission_hiv"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffff00"
            android:text="RISK OF TUBERCULOSIS"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="#ffff00"
            android:text="@string/young_treatment_risk_TB"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textSize="20sp" />
    </LinearLayout>

</ScrollView>