<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrl_1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#f4eaa3"
    android:orientation="vertical" >


     <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
        android:id="@+id/textView1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ff69b4"
        android:text="SEVERE PNEUMONIA OR VERY SEVERE DISEASE"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textStyle="bold" />

     <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
        android:id="@+id/signsDehydrationPink"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ff69b4"
        android:text="@string/signs_severe_pneumonia"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

     <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
        android:id="@+id/textView4"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFF00"
        android:text="PNEUMONIA"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textStyle="bold" />

     <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
        android:id="@+id/space2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#ffff00"
        android:text="@string/signs_pneumonia"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />

     <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#90EE90"
        android:text="NO PNEUMONIA: COUGH OR COLD"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#000000"
        android:textStyle="bold" />

     <TextView
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
        android:id="@+id/signsDehydration"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#90ee90"
        android:text="@string/signs_no_pneumonia"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000"
        android:textSize="20sp" />

</LinearLayout>